# paragraph

./: .dockerignore  .gitignore  .pylintrc  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  README.md  RELEASES.md  configure  requirements.txt
doc/: Installation.md  filter-scheme.md  genotyping-parameters.md  graph-counting.md  graph-models.md  graph-tools.md  linting-and-testing.md  multiple-samples.md  phasing.md  validation-with-simulated-reads.md
paper-data/: download-instructions.txt
share/paragraph_output_examples/: chr1-1127789-1127860.vcf.json  chr21-18612330-18613633.vcf.json  pg-het-ins.result.json  test-pp1.json
share/schema/: common_definitions.json  input_schema.json  output_schema.json  schema_check.py
share/test-data/basic/: del-with-bad-edges-value.json  del-with-bad-node-seq-ids.json  del-with-duplicate-node-names.json  del-with-duplicate-seqs.json  del-with-edges-nodes.json  del-with-edges-only.json  del-with-no-ref-or-seq-node-key.json  del-with-nodes-only.json  del-with-ref-node-array.json  dummy.fa
share/test-data/genotyping_test/: chr4_graph_typing.2sample.json  chr4_graph_typing.manifest  multi_pg_input.json
share/test-data/genotyping_test_2/: chrA.json  chrA.pp.json  chrA.vcf  chrB.json  chrB.pp.json  chrB.vcf  chrC.json  chrC.pp.json  chrC.vcf  expected-genotypes.json  expected-genotypes.vcf  expected-variants.json  samples.txt  swaps.bam  swaps.bam.bai  swaps.fa  swaps.fa.fai  swaps.vcf
share/test-data/misc/: NA12878.manifest.txt  NA12878_2x100_highdepth.txt  chrQ.fa  chrQ.fa.fai  del-ins-manifest.txt  del-ins-model.json  del-ins.bam  del-ins.bam.bai  deletion.bam  deletion.bam.bai  deletion.fa  deletion.fa.fai  deletion.json  deletion.txt  ins-model.json  model_test.json  na12878_del_test_chr10_115490000_115522000.bam  na12878_del_test_chr10_115490000_115522000.bam.bai  na12878_del_test_chr10_115490000_115522000.bed  na12878_del_test_chr10_115490000_115522000.json  na12878_del_test_chr10_115490000_115522000.tsv  paragraph_output.json  single-unit-str.bam  single-unit-str.bam.bai  single-unit-str.fa  single-unit-str.json  single-unit-str.txt  test.json  test.tsv  test_input.json
share/test-data/multigrmpy/: expected.json
share/test-data/multiparagraph/: candidates.json  dummy.fa  dummy.fa.fai  expected.json  reads.bam  reads.bam.bai  reads.sam
share/test-data/paragraph/: generate.sh
share/test-data/round-trip-genotyping/: candidates.json  candidates.vcf  dummy.fa  dummy.fa.fai  expected-vcf-record.txt  sample1.bam  sample1.bam.bai  sample1.sam  sample2.bam  sample2.bam.bai  sample2.sam  samples.txt
share/test-data/vcf2paragraph/: sniffles.vcf
src/c++/lib/: CMakeLists.txt
src/c++/lib/common/: Alignment.cpp  BCFHelpers.cpp  BamReader.cpp  Error.cpp  Fasta.cpp  Fragment.cpp  Klib.cpp  Klib.hh  KlibGlobal.cpp  KlibGlobal.hh  KlibImpl.hh  Program.cpp  ReadExtraction.cpp  ReadPair.cpp  ReadPairs.cpp  ReadPileup.cpp  Threads.cpp
src/c++/lib/genotyping/: BreakpointFinder.cpp  BreakpointGenotyper.cpp  BreakpointStat.cpp  BreakpointStatistics.cpp  CombinedGenotype.cpp  EMbreakpointGenotyper.cpp  Genotype.cpp  GenotypeSet.cpp  GenotypingParameters.cpp  GraphBreakpointGenotyper.cpp  GraphGenotyper.cpp  GraphGenotyperImpl.hh  Idxdepth.cpp  PopStats.cpp  PopulationStatistics.cpp  SampleInfo.cpp  VariantGenotype.cpp
src/c++/lib/graphs/: GaplessAligner.cpp  Graph.cpp  GraphBuilders.cpp  GraphCoordinates.cpp  GraphMapping.cpp  GraphMappingOperations.cpp  GraphPath.cpp  GraphPathOperations.cpp  GraphSearch.cpp  KmerIndex.cpp  KmerIndexOperations.cpp  WalkableGraph.cpp
src/c++/lib/grm/: Align.cpp  CompositeAligner.cpp  GraphAligner.cpp  GraphInput.cpp  KlibAligner.cpp  KmerAligner.cpp  PathAligner.cpp  ValidationAligner.cpp
src/c++/lib/grmpy/: AlignSamples.cpp  CountAndGenotype.cpp  Parameters.cpp  Workflow.cpp
src/c++/lib/idxdepth/: DepthEstimation.cpp  IndexBinning.cpp
src/c++/lib/intervals/: IntervalBuffer.cpp
src/c++/lib/pam/: Parameters.cpp
src/c++/lib/paragraph/: AlignmentStatistics.cpp  Disambiguation.cpp  GraphSummaryStatistics.cpp  GraphVariants.cpp  HaplotypePaths.cpp  Parameters.cpp  ReadCounting.cpp  ReadFilter.cpp  Workflow.cpp
src/c++/lib/paragraph/readfilters/: BadAlign.hh  KmerFilter.cpp  KmerFilter.hh  NonUniq.hh
src/c++/lib/statistics/: MinCovDetGaussian.cpp  NaiveGaussian.cpp
src/c++/lib/variant/: RefVar.cpp  Variant.cpp
src/c++/main/: CMakeLists.txt  SampleInfo.cpp  graph-to-fasta.cpp  grmpy.cpp  idxdepth.cpp  kmerstats.cpp  pam.cpp  paragraph.cpp
src/c++/test/: CMakeLists.txt  common.hh  test_align.cpp  test_breakpoint_genotyper.cpp  test_breakpointstatistics.cpp  test_combined_genotype.cpp  test_disambiguation.cpp  test_em_genotyper.cpp  test_error.cpp  test_fasta.cpp  test_gapless_aligner.cpp  test_genetics.cpp  test_genotype.cpp  test_genotyping_parameter.cpp  test_graph.cpp  test_graph_input.cpp  test_graph_mapping.cpp  test_graph_mapping_operations.cpp  test_graph_path.cpp  test_graph_path_operations.cpp  test_graphcoordinates.cpp  test_interval_tree.cpp  test_intervalbuffer.cpp  test_intervallist.cpp  test_jsonhelpers.cpp  test_klibaligner.cpp  test_kmeraligner.cpp  test_kmerindex.cpp  (+18 more)
src/c++/test-blackbox/: CMakeLists.txt  common.hh  test_grm.cpp  test_main.cpp  test_multithreading.cpp  test_paragraph.cpp  test_pathaligner_blackbox.cpp
src/cmake/: GetBoost.cmake  GetGitRevisionDescription.cmake  GetGoogleTest.cmake  GetGraphTools.cmake  GetHtslib.cmake  GetProtobuf.cmake  GetSpdlog.cmake  configureFiles.cmake  cxx.cmake
src/docker-testing/: Dockerfile  clang-formatting.sh  clang-linting.sh  cppcheck.sh  make_clang_build.sh  make_gcc_build.sh  python-linting.sh  realpath.py  testing.sh  valgrind-testing.sh
src/protobuf/: CMakeLists.txt  graph.proto  read.proto  variant.proto
src/python/: CMakeLists.txt
src/sh/: cppcheck-check.py  format-everything.sh  illumina-setup.sh  python-tests.sh  run_all_python_tests.py  valgrind-check.py  valgrind-suppressions.supp  valgrind-test.sh
src/sh/validation/: CMakeLists.txt  simulate-reads.sh.in  swapReference.sh
(+229 files in other folders)
